Including Terminal output to web dashboard

--- a/templates/warden/welcome.html
+++ b/templates/warden/welcome.html
@@ -13,7 +13,7 @@
             <h1>Welcome to the WARden</h1>
             <h2>Personal Node Monitor</h2>
             <h4 style='color: rgb(224, 224, 224);'>Open Source | Private | Sovereign</h4>
-            <a href="/setup" class="btn">Get Started</a>
+            <a href="/dashboard" class="btn">Get Started</a>
         </div>
     </section>
 </div>
