--- a/static/css/warden_main.css
+++ b/static/css/warden_main.css
@@ -142,13 +142,19 @@ h6 {
 
 pre {
   font-family: monospace;
+  background-color: #000000;
 }
 
 .codetext {
   font-family: monospace;
-  font-size: 120%;
-  background-color: LightGray;
+  color: #ffffff;
+  font-size: 16px;
   font-weight: bold;
+  width: 100%;
+  height: 100%;
+  max-width: 400px;
+  max-height: 400px;
+  padding: 3em;
 }
 
 .table-white {
