--- a/static/css/warden_main.css
+++ b/static/css/warden_main.css
@@ -142,7 +142,7 @@ h6 {
 
 pre {
   font-family: monospace;
-  background-color: #000000;
+  background-color: #36363A;
 }
 
 .codetext {
@@ -152,8 +152,6 @@ pre {
   font-weight: bold;
   width: 100%;
   height: 100%;
-  max-width: 400px;
-  max-height: 400px;
   padding: 3em;
 }
 
